--- a/main.css
+++ b/main.css
@@ -11,13 +11,20 @@
 .demo-canvas {
   
 }
-.wrap{
+.wrap {
     width: 1060px;
+    height:auto;
     margin: auto;
-    }
-.text_over_image{
+    text-align:center;
+    position:relative;
+}
+.text_over_image {
     position: absolute;
-    top: 20px;
-    }   
-
-
+    margin: auto;
+    top: 0;
+    left:0;
+    right:0;
+    bottom:0;
+    color:#fff;
+    height:100px;
+}
